--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.png" alt="Photo portrait de Nina Carducci">
+		<img srcset="./assets/images/nina-256w.webp 256w, ./assets/images/nina-560w.webp 560w, ./assets/images/nina-890w.webp 890w, ./assets/images/nina-1120w.webp 1120w" src="./assets/images/nina.webp" alt="Photo portrait de Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h3>
