--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div id="about">
 	<div class="picture left">
 		<img srcset="./assets/images/nina-mobile.webp 256w, ./assets/images/nina-desktop.webp 560w" 
-			 sizes="(max-width: 500px) 300px, 560px"
+			 sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
 			 src="./assets/images/nina.webp" alt="Photo portrait de Nina Carducci">
 	</div>
 	<div id="about-me">
