--- a/index.html
+++ b/index.html
@@ -39,14 +39,17 @@
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img srcset="./assets/images/slider/businessman-shibuya-crossing-desktop.webp 1920w, ./assets/images/slider/businessman-shibuya-crossing-mobile.webp 414w"
+					 sizes="(max-width: 500px) 500px, 1920px"
 					 src="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" class="d-block w-100" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos">
 			</div>
 			<div class="carousel-item">
 				<img srcset="./assets/images/slider/Public-fosse-concert-desktop.webp 1920w, ./assets/images/slider/Public-fosse-concert-mobile.webp 414w"
+					 sizes="(max-width: 500px) 500px, 1920px"
 					 src="./assets/images/slider/Public-fosse-concert-desktop.webp" class="d-block w-100" alt="Photo du public de la fosse d'un concert">
 			</div>
 			<div class="carousel-item">
 				<img srcset="./assets/images/slider/mariage-applaudissement-desktop.webp 1920w, ./assets/images/slider/mariage-applaudissement-mobile.webp 414w"
+					 sizes="(max-width: 500px) 500px, 1920px"
 					 src="./assets/images/slider/mariage-applaudissement-desktop.webp" class="d-block w-100" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives">
 			</div>
 		</div>
