--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img srcset="./assets/images/slider/businessman-shibuya-crossing-desktop.webp 1920w, ./assets/images/slider/businessman-shibuya-crossing-mobile.webp 414w"
-					 sizes="(max-width: 500px) 500px, 1920px"
+					 sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
 					 src="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" class="d-block w-100" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos">
 			</div>
 			<div class="carousel-item">
@@ -67,7 +67,7 @@
 	<div class="picture left">
 		<img srcset="./assets/images/nina-mobile.webp 256w, ./assets/images/nina-desktop.webp 560w" 
 			 sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
-			 src="./assets/images/nina.webp" alt="Photo portrait de Nina Carducci">
+			 src="./assets/images/nina-desktop.webp" alt="Photo portrait de Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h3>
@@ -80,15 +80,50 @@
 	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="Photo du concert d'Aaron Paul"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="Photo portrait d'un homme d'affaire"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="Photo d'une entreprise où deux salariées rient"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="Photo où deux personnes vont se donner les mains"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="Photo portrait d'Ade Tunji"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt="Photo de deux jeunes mariés souriant"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt="Photo portrait d'une jeune fille avec des lunettes"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="Photo du concert de Austin Neill"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="Photo portrait d'une salariée d'entreprise riant devant son ordinateur"/>
+			<img data-gallery-tag="Concert" class="gallery-item" 
+				srcset="./assets/images/gallery/concerts/concert-aaron-paul-desktop.webp 440w, ./assets/images/gallery/concerts/concert-aaron-paul-mobile.webp 413w"
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+				src="./assets/images/gallery/concerts/concert-aaron-paul-desktop.webp" alt="Photo du concert d'Aaron Paul"/>
+
+			<img data-gallery-tag="Entreprises" class="gallery-item" 
+				srcset="./assets/images/gallery/entreprise/portrait-homme-affaire-desktop.webp 440w, ./assets/images/gallery/entreprise/portrait-homme-affaire-mobile.webp 413w"
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+				src="./assets/images/gallery/entreprise/portrait-homme-affaire-desktop.webp" alt="Photo portrait d'un homme d'affaire"/>
+
+			<img data-gallery-tag="Entreprises" class="gallery-item" 
+				srcset="./assets/images/gallery/entreprise/salariées-riant-desktop.webp 440w, ./assets/images/gallery/entreprise/salariées-riant-mobile.webp 413w"
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+				src="./assets/images/gallery/entreprise/salariées-riant-desktop.webp" alt="Photo d'une entreprise où deux salariées rient"/>
+
+			<img data-gallery-tag="Mariages" class="gallery-item" 
+				srcset="./assets/images/gallery/mariage/personnes-se-donnant-les-mains-desktop.webp 440w, ./assets/images/gallery/mariage/personnes-se-donnant-les-mains-mobile.webp 413w"
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+				src="./assets/images/gallery/mariage/personnes-se-donnant-les-mains-desktop.webp" alt="Photo où deux personnes vont se donner les mains"/>
+
+			<img data-gallery-tag="Portrait" class="gallery-item" 
+				srcset="./assets/images/gallery/portraits/portrait-ade-tunji-desktop.webp 440w, ./assets/images/gallery/portraits/portrait-ade-tunji-mobile.webp 413w"
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+				src="./assets/images/gallery/portraits/portrait-ade-tunji-desktop.webp" alt="Photo portrait d'Ade Tunji"/>
+
+			<img data-gallery-tag="Mariages" class="gallery-item" 
+				srcset="./assets/images/gallery/mariage/mariés-souriants-desktop.webp 440w, ./assets/images/gallery/mariage/mariés-souriants-mobile.webp 413w"
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+				src="./assets/images/gallery/mariage/mariés-souriants-desktop.webp" alt="Photo de deux jeunes mariés souriant"/>
+
+			<img data-gallery-tag="Portrait" class="gallery-item" 
+				srcset="./assets/images/gallery/portraits/portrait-femme-lunettes-desktop.webp 440w, ./assets/images/gallery/portraits/portrait-femme-lunettes-mobile.webp 413w"
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+				src="./assets/images/gallery/portraits/portrait-femme-lunettes-desktop.webp" alt="Photo portrait d'une jeune fille avec des lunettes"/>
+
+			<img data-gallery-tag="Concert" class="gallery-item"
+				srcset="./assets/images/gallery/concerts/concert-austin-neill-desktop.webp 440w, ./assets/images/gallery/concerts/concert-austin-neill-mobile.webp 413w"
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" 
+				src="./assets/images/gallery/concerts/concert-austin-neill-desktop.webp" alt="Photo du concert de Austin Neill"/>
+
+			<img data-gallery-tag="Entreprises" class="gallery-item" 
+				srcset="./assets/images/gallery/entreprise/salariée-souriante-desktop.webp 440w, ./assets/images/gallery/entreprise/salariée-souriante-mobile.webp 413w"
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+				src="./assets/images/gallery/entreprise/salariée-souriante-desktop.webp" alt="Photo portrait d'une salariée d'entreprise riant devant son ordinateur"/>
 		</div>
 	</div>
 	<div class="quote">
@@ -160,7 +195,9 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.png" alt="Photo d'un appareil photo">
+			<img srcset="./assets/images/camera-desktop.webp 419w, ./assets/images/camera-mobile.webp 260w"
+				sizes="(min-width: 1600px) 419px, (min-width: 1200px) calc(28.16vw - 26px), (min-width: 1020px) calc(43.75vw - 68px), (min-width: 980px) calc(200vw - 1612px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)"
+				src="./assets/images/camera-desktop.webp" alt="Photo d'un appareil photo">
 		</div>
 	</div>
 </div>
