--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 	</div>
 </div>
 <div id="header">
-
 	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
 			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -147,7 +146,6 @@
 				<p>350€/demi journée</p>
 				<span>Matériel, déplacement inclus</span>
 			</div>
-
 		</div>
 		<div class="service">
 			<div class="service__description">
@@ -196,8 +194,8 @@
 		</div>
 		<div class="picture right">
 			<img srcset="./assets/images/camera-desktop.webp 419w, ./assets/images/camera-mobile.webp 260w"
-				sizes="(min-width: 1600px) 419px, (min-width: 1200px) calc(28.16vw - 26px), (min-width: 1020px) calc(43.75vw - 68px), (min-width: 980px) calc(200vw - 1612px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)"
-				src="./assets/images/camera-desktop.webp" alt="Photo d'un appareil photo">
+				sizes="(min-width: 1600px) 419px, (min-width: 1200px) calc(28.16vw - 26px), (min-width: 1020px) calc(43.75vw - 68px), (min-width: 980px) calc(200vw - 1612px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 360px) calc(45vw - 49px), calc(90vw - 99px)"
+				src="./assets/images/camera-desktop.webp" alt="Photo d'un appareil photo"/>
 		</div>
 	</div>
 </div>
