--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <div class="top-header">
 	<h1 class="name">Nina Carducci</h1>
-	<div class="nav">   
+	<nav class="nav">   
 		<ul>
 			<li><a href="#about">À propos</a></li>
 			<li><a href="#gallery">Galerie</a></li>
@@ -26,7 +26,7 @@
 			<li><a href="#contact">Contact</a></li>
 			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="logo instagram"></a></li>
 		</ul>
-	</div>
+	</nav>
 </div>
 <div id="header">
 	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
