--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img srcset="./assets/images/slider/businessman-shibuya-crossing-desktop.webp 1920w, ./assets/images/slider/businessman-shibuya-crossing-tablet.webp 1000w, ./assets/images/slider/businessman-shibuya-crossing-mobile.webp 500w"
-					sizes="100vw"
+					sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
 					src="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" class="d-block w-100" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos">
 			</div>
 			<div class="carousel-item">
@@ -47,7 +47,7 @@
 					src="./assets/images/slider/Public-fosse-concert-desktop.webp" class="d-block w-100" alt="Photo du public de la fosse d'un concert">
 			</div>
 			<div class="carousel-item">
-				<img srcset="./assets/images/slider/mariage-applaudissement-desktop.webp 1920w, ./assets/images/slider/mariage-applaudissement-tablet.webp 1000w ./assets/images/slider/mariage-applaudissement-mobile.webp 500w"
+				<img srcset="./assets/images/slider/mariage-applaudissement-desktop.webp 1920w, ./assets/images/slider/mariage-applaudissement-tablet.webp 1000w, ./assets/images/slider/mariage-applaudissement-mobile.webp 500w"
 					sizes="100vw"
 					src="./assets/images/slider/mariage-applaudissement-desktop.webp" class="d-block w-100" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives">
 			</div>
