--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
 	<meta name="description" content="Découvrez le monde à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Capturant la beauté des moments précieux, des mariages aux concerts, explorez son portfolio et contactez-la pour immortaliser vos souvenirs." />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="./assets/style.min.css">
+	<link rel="preload" as="style" href="./assets/bootstrap/bootstrap.min.css">
+	<link rel="preload" as="style" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
