--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 			<div class="carousel-item">
 				<img srcset="./assets/images/slider/Public-fosse-concert-desktop.webp 1920w, ./assets/images/slider/Public-fosse-concert-tablet.webp 1000w, ./assets/images/slider/Public-fosse-concert-mobile.webp 500w"
 					sizes="100vw"
-					src="./assets/images/slider/Public-fosse-concert-desktop.webp" class="d-block w-100" alt="Photo du public de la fosse d'un concert">
+					src="./assets/images/slider/Public-fosse-concert-desktop.webp" loading="lazy" class="d-block w-100" alt="Photo du public de la fosse d'un concert">
 			</div>
 			<div class="carousel-item">
 				<img srcset="./assets/images/slider/mariage-applaudissement-desktop.webp 1920w, ./assets/images/slider/mariage-applaudissement-tablet.webp 1000w, ./assets/images/slider/mariage-applaudissement-mobile.webp 500w"
 					sizes="100vw"
-					src="./assets/images/slider/mariage-applaudissement-desktop.webp" class="d-block w-100" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives">
+					src="./assets/images/slider/mariage-applaudissement-desktop.webp" loading="lazy" class="d-block w-100" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -76,15 +76,15 @@
 		<h2 class="title">Portfolio</h2>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-aaron-paul.webp" alt="Photo du concert d'Aaron Paul"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/portrait-homme-affaire.webp" alt="Photo portrait d'un homme d'affaire"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/salariées-riant.webp" alt="Photo d'une entreprise où deux salariées rient"/>
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/personnes-se-donnant-les-mains.webp" alt="Photo où deux personnes vont se donner les mains"/>
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-ade-tunji.webp" alt="Photo portrait d'Ade Tunji"/>
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariés-souriants.webp" alt="Photo de deux jeunes mariés souriant"/>
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-femme-lunettes.webp" alt="Photo portrait d'une jeune fille avec des lunettes"/>
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill.webp" alt="Photo du concert de Austin Neill"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/salariée-souriante.webp" alt="Photo portrait d'une salariée d'entreprise riant devant son ordinateur"/>
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-aaron-paul.webp" loading="lazy" alt="Photo du concert d'Aaron Paul"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/portrait-homme-affaire.webp" loading="lazy" alt="Photo portrait d'un homme d'affaire"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/salariées-riant.webp" loading="lazy" alt="Photo d'une entreprise où deux salariées rient"/>
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/personnes-se-donnant-les-mains.webp" loading="lazy" alt="Photo où deux personnes vont se donner les mains"/>
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-ade-tunji.webp" loading="lazy" alt="Photo portrait d'Ade Tunji"/>
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariés-souriants.webp" loading="lazy" alt="Photo de deux jeunes mariés souriant"/>
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-femme-lunettes.webp" loading="lazy" alt="Photo portrait d'une jeune fille avec des lunettes"/>
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill.webp" loading="lazy" alt="Photo du concert de Austin Neill"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/salariée-souriante.webp" loading="lazy" alt="Photo portrait d'une salariée d'entreprise riant devant son ordinateur"/>
 			</div>
 		</div>
 		<div class="quote">
@@ -157,7 +157,7 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.webp" alt="Photo d'un appareil photo"/>
+				<img src="./assets/images/camera.webp" loading="lazy" alt="Photo d'un appareil photo"/>
 			</div>
 		</div>
 	</div>
