--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
-	<link rel="preload" fetchpriority="high" as="image" href="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" type="image/webp">
 	<meta charset="UTF-8">
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" async></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
@@ -40,7 +39,7 @@
 			<div class="carousel-item active">
 				<img srcset="./assets/images/slider/businessman-shibuya-crossing-desktop.webp 1920w, ./assets/images/slider/businessman-shibuya-crossing-tablet.webp 1000w, ./assets/images/slider/businessman-shibuya-crossing-mobile.webp 500w"
 					sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
-					src="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" class="d-block w-100" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos">
+					src="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" loading="lazy" class="d-block w-100" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos">
 			</div>
 			<div class="carousel-item">
 				<img srcset="./assets/images/slider/Public-fosse-concert-desktop.webp 1920w, ./assets/images/slider/Public-fosse-concert-tablet.webp 1000w, ./assets/images/slider/Public-fosse-concert-mobile.webp 500w"
