--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img srcset="./assets/images/slider/mariage-applaudissement-desktop.webp 1920w, ./assets/images/slider/mariage-applaudissement-tablet.webp 1000w, ./assets/images/slider/mariage-applaudissement-mobile.webp 500w"
-					sizes="100vw"
-					src="./assets/images/slider/mariage-applaudissement-desktop.webp" loading="eager" class="d-block w-100" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives">
+				<img srcset="./assets/images/slider/businessman-shibuya-crossing-desktop.webp 1920w, ./assets/images/slider/businessman-shibuya-crossing-tablet.webp 1000w, ./assets/images/slider/businessman-shibuya-crossing-mobile.webp 500w"
+					sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
+					src="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" loading="eager" class="d-block w-100" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos">
 			</div>
 			<div class="carousel-item">
 				<img srcset="./assets/images/slider/Public-fosse-concert-desktop.webp 1920w, ./assets/images/slider/Public-fosse-concert-tablet.webp 1000w, ./assets/images/slider/Public-fosse-concert-mobile.webp 500w"
@@ -46,9 +46,9 @@
 					src="./assets/images/slider/Public-fosse-concert-desktop.webp" loading="lazy" class="d-block w-100" alt="Photo du public de la fosse d'un concert">
 			</div>
 			<div class="carousel-item">
-				<img srcset="./assets/images/slider/businessman-shibuya-crossing-desktop.webp 1920w, ./assets/images/slider/businessman-shibuya-crossing-tablet.webp 1000w, ./assets/images/slider/businessman-shibuya-crossing-mobile.webp 500w"
-					sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
-					src="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" loading="lazy" class="d-block w-100" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos">
+				<img srcset="./assets/images/slider/mariage-applaudissement-desktop.webp 1920w, ./assets/images/slider/mariage-applaudissement-tablet.webp 1000w, ./assets/images/slider/mariage-applaudissement-mobile.webp 500w"
+					sizes="100vw"
+					src="./assets/images/slider/mariage-applaudissement-desktop.webp" loading="lazy" class="d-block w-100" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
