resize img gallery

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 		<h2 class="title">Portfolio</h2>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-aaron-paul.webp" loading="lazy" alt="Photo du concert d'Aaron Paul"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/portrait-homme-affaire.webp" loading="lazy" alt="Photo portrait d'un homme d'affaire"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/salariées-riant.webp" loading="lazy" alt="Photo d'une entreprise où deux salariées rient"/>
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/personnes-se-donnant-les-mains.webp" loading="lazy" alt="Photo où deux personnes vont se donner les mains"/>
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-ade-tunji.webp" loading="lazy" alt="Photo portrait d'Ade Tunji"/>
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariés-souriants.webp" loading="lazy" alt="Photo de deux jeunes mariés souriant"/>
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-femme-lunettes.webp" loading="lazy" alt="Photo portrait d'une jeune fille avec des lunettes"/>
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill.webp" loading="lazy" alt="Photo du concert de Austin Neill"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/salariée-souriante.webp" loading="lazy" alt="Photo portrait d'une salariée d'entreprise riant devant son ordinateur"/>
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-aaron-paul-800.webp" srcset="./assets/images/gallery/concerts/concert-aaron-paul-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo du concert d'Aaron Paul"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/portrait-homme-affaire-800.webp" srcset="./assets/images/gallery/entreprise/portrait-homme-affaire-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo portrait d'un homme d'affaire"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/salariées-riant-800.webp" srcset="./assets/images/gallery/entreprise/salariées-riant-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo d'une entreprise où deux salariées rient"/>
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/personnes-se-donnant-les-mains-800.webp" srcset="./assets/images/gallery/mariage/personnes-se-donnant-les-mains-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo où deux personnes vont se donner les mains"/>
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-ade-tunji-800.webp" srcset="./assets/images/gallery/portraits/portrait-ade-tunji-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo portrait d'Ade Tunji"/>
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariés-souriants-800.webp" srcset="./assets/images/gallery/mariage/mariés-souriants-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo de deux jeunes mariés souriant"/>
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-femme-lunettes-800.webp" srcset="./assets/images/gallery/portraits/portrait-femme-lunettes-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo portrait d'une jeune fille avec des lunettes"/>
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill-800.webp" srcset="./assets/images/gallery/concerts/concert-austin-neill-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo du concert de Austin Neill"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/salariée-souriante-800.webp" srcset="./assets/images/gallery/entreprise/salariée-souriante-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo portrait d'une salariée d'entreprise riant devant son ordinateur"/>
 			</div>
 		</div>
 		<div class="quote">
