utilisation cdn pour tout et rajout favicon

--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
 	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
 	<meta name="description" content="Découvrez le monde à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Capturant la beauté des moments précieux, des mariages aux concerts, explorez son portfolio et contactez-la pour immortaliser vos souvenirs." />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/favicon.ico" type="image/x-icon">
 	<!-- Schema.org meta for Google+ -->
 	<meta itemprop="name" content="Nina Carducci photographe" />
 	<meta itemprop="description" content="Portfolio de Nina Carducci photographe à Bordeaux" />
-	<meta itemprop="image" content="./assets/images/nina-500.webp" />
+	<meta itemprop="image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/nina-500.webp" />
 	<!-- Twitter summary card with large image must be at least 280x150px -->
 	<meta name="twitter:card" content="Nina Carducci photographe" />
 	<meta name="twitter:site" content="Nina Carducci" />
 	<meta name="twitter:creator" content="Nina Carducci" />
 	<meta name="twitter:title" content="Portfolio de Nina Carducci photographe à Bordeaux" />
 	<meta name="twitter:description" content="Portfolio de Nina Carducci photographe à Bordeaux" />
-	<meta name="twitter:image" content="./assets/images/nina-500.webp" />
+	<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/nina-500.webp" />
 	<!-- Open Graph meta (Facebook, Linkedin) -->
 	<meta property="og:title" content="Portfolio de Nina Carducci photographe à Bordeaux" />
 	<meta property="og:type" content="portfolio" />
 	<meta property="og:description" content="Portfolio de Nina Carducci photographe à Bordeaux" />
 	<meta property="author" content="Nina Carducci" />
-	<meta property="og:image" content="./assets/images/nina-500.webp" />
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	<meta property="og:image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/nina-500.webp" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/bootstrap/bootstrap.min.css">
 	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.min.js" async></script>
 	<style>@import url('https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,800&display=swap');</style>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
-	<script src="./assets/maugallery.min.js" defer></script>
-	<script src="./assets/scripts.min.js" defer></script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh" crossorigin="anonymous" defer></script>
+	<script src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/bootstrap/bootstrap.bundle.min.js" async></script>
+	<script src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/maugallery.min.js" defer></script>
+	<script src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/scripts.min.js" defer></script>
 	<script type="application/ld+json">
 		{
 		  "@context": "https://schema.org",
@@ -83,7 +84,7 @@
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="logo instagram"></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/instagram.png" alt="logo instagram"></a></li>
 		</ul>
 	</nav>
 </header>
