ajustement twitter card

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta itemprop="description" content="Portfolio de Nina Carducci photographe à Bordeaux" />
 	<meta itemprop="image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/ninasocial.webp" />
 	<!-- Twitter summary card with large image must be at least 280x150px -->
-	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Portfolio de Nina Carducci photographe à Bordeaux" />
 	<meta name="twitter:description" content="Portfolio de Nina Carducci photographe à Bordeaux" />
 	<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/ninasocial.webp" />
