--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	<!-- Twitter summary card with large image must be at least 280x150px -->
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Portfolio de Nina Carducci photographe à Bordeaux" />
-	<meta name="twitter:description" content="Portfolio de Nina Carducci photographe à Bordeaux" />
+	<meta name="twitter:description" content="Découvrez le monde à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Capturant la beauté des moments précieux, des mariages aux concerts, explorez son portfolio et contactez-la pour immortaliser vos souvenirs." />
 	<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/ninasocial.webp" />
 	<!-- Open Graph meta (Facebook, Linkedin) -->
 	<meta property="og:title" content="Portfolio de Nina Carducci photographe à Bordeaux" />
 	<meta property="og:type" content="portfolio" />
-	<meta property="og:description" content="Portfolio de Nina Carducci photographe à Bordeaux" />
+	<meta property="og:description" content="Découvrez le monde à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Capturant la beauté des moments précieux, des mariages aux concerts, explorez son portfolio et contactez-la pour immortaliser vos souvenirs." />
 	<meta property="author" content="Nina Carducci" />
 	<meta property="og:image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/ninasocial.webp" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/bootstrap/bootstrap.min.css">
