Correction max caractère description

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
-	<meta name="description" content="Découvrez le monde à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Capturant la beauté des moments précieux, des mariages aux concerts, explorez son portfolio et contactez-la pour immortaliser vos souvenirs." />
+	<meta name="description" content="Explorez le portfolio de Nina Carducci, photographe à Bordeaux : mariages, concerts, moments précieux. Contactez-la pour capturer vos souvenirs." />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/favicon.ico" type="image/x-icon">
 	<!-- Schema.org meta for Google+ -->
